2013-05-14  Richard Biener  <rguenther@suse.de>

	PR gcov-profile/57269
	Backport from mainline
	2012-06-30  Nathan Sidwell  <nathan@acm.org>

	* coverage.c (coverage_init): Read counts file before writing
	graph header.

2012-09-07  Richard Earnshaw  <rearnsha@arm.com>

	PR tree-ssa/54295
	* tree-ssa-math-opts.c (widening_mult_conversion_strippable_p):
	Sign-extension of a zero-extended value can be simplified to
	just zero-extension.

2012-08-20  Richard Earnshaw  <rearnsha@arm.com>

	PR tree-ssa/54295
	* tree-ssa-math-opts.c (is_widening_mult_rhs_p): Delete rhs_code
	declaration and setter.

2012-08-20  Richard Earnshaw  <rearnsha@arm.com>

	PR tree-ssa/54295
	* tree-ssa-math-opts.c (widening_mult_conversion_strippable_p):
	New function.
	(is_widening_mult_rhs_p): Use it.

2013-05-15  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/57260
	* config/mips/mips.c (mips_function_ok_for_sibcall): Don't allow
	sibling calls to functions that would normally be lazily bound,
	unless $gp is call-clobbered.

2013-03-14  Jakub Jelinek  <jakub@redhat.com>

	* config/aarch64/t-aarch64-linux (MULTILIB_OSDIRNAMES): Set.

2012-06-18  Tejas Belagod  <tejas.belagod@arm.com>

	* doc/md.texi: Document int iterators.
	* read-rtl.c (ints): New iterator group.
	(find_int): Int iterator group callback.
	(apply_int_iterator): Likewise.
	(apply_iterators): Traverse int iterator table and add all the used
	iterators to list.
	(initialize_iterators): Initialize data structures and callbacks for int
	iterators.
	(read_rtx): Parse and read mappings for int iterators.
	(read_rtx_code): Record int iterator usage.

2012-06-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* read-rtl.c (mapping): Remove index field.  Add current_value field.
	Define heap vectors.
	(iterator_group): Fix long line.  Remove num_builtins field and
	uses_iterator fields.  Make apply_iterator take a void * parameter.
	(iterator_use, atttribute_use): New structures.